[project]
name = "knowledge_base"
version = "0.1.0"
description = "Agent knowledge base with injectable LLM and embedding clients"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
